# OscilloscopeAutomation

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: pwm_40pct_1khz.toml
docs/: automation-suite-decision.md  scopeblock-project-plan-v2.docx  scopeblock-task-tracker.xlsx
examples/: offline_demo.py
robot/: ScopeBlockLibrary.py  self_test.robot
scripts/: README.md  bench_acquire.py  bench_configure.py  bench_connect-guide.md  bench_connect.py  bench_identify.py  bench_validate.py  sim_mso44b.yaml  verify_sim_state.py
scripts/real/: bench_configure.py  bench_scope.py  bench_socket.py  requirements.txt  teststand_api.py
scripts/real/configs/: bench_full.json  default.json
scripts/real/function_generator/: afg_socket.py  example_flow.py  teststand_api.py
scripts/real/oscilloscope/: bench_socket.py  discovery.py  teststand_api.py  teststand_fleet_api.py
scripts/sim/: bench_connect.py  bench_identify.py
src/scopeblock/: __init__.py  api.py  waveform.py
src/scopeblock/afg/: __init__.py  afg31102.py
src/scopeblock/analysis/: __init__.py  compare.py  measure.py
src/scopeblock/config/: __init__.py  loader.py  schema.py
src/scopeblock/io/: __init__.py  export.py
src/scopeblock/scope/: __init__.py  mso44b.py  preamble.py
src/scopeblock/transport/: __init__.py  (+3 more)
tests/: conftest.py
tests/fixtures/: __init__.py  synthetic.py
tests/integration/: test_afg_loopback_hw.py
tests/unit/: test_api_and_loopback.py  test_compare.py  test_config.py  test_export.py  test_measure.py  test_preamble_scaling.py  test_transport_fake.py
(+3 files in other folders)
